feat: Add Lighthouse CI integration and improve SEO metadata - Implemented Lighthouse CI in the CI workflow and added Open Graph metadata to enhance SEO in the landing page.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Create high-converting landing pages quickly with our flexible component-based system. Perfect for marketing campaigns, product launches, and lead generation." />
+    <meta property="og:title" content="Landing Page Factory" />
+    <meta property="og:description" content="Create high-converting landing pages quickly with our flexible component-based system." />
+    <meta property="og:type" content="website" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <!-- Add regular Material Icons + Material Symbols (used across components and docs) -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet">
-    <title>lp_factory</title>
+    <title>Landing Page Factory</title>
   </head>
   <body>
     <div id="root"></div>
