chore: update Storybook configuration and assets
- Excluded story files and Storybook configuration from TypeScript compilation.

--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script type="module" crossorigin src="./assets/iframe-Beo6ZaOG.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BNZ--PW5.js"></script>
   </head>
 
   <body>
